# ticket-system-api

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py  seed.py
app/core/: __init__.py  config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  comment.py  tag.py  ticket.py  user.py
app/repositories/: __init__.py  comment_repository.py  tag_repository.py  ticket_repository.py  user_repository.py
app/routers/: __init__.py  auth.py  categories.py  comments.py  stats.py  tags.py  tickets.py  users.py
app/schemas/: __init__.py  auth.py  comment.py  common.py  stats.py  tag.py  ticket.py  user.py
app/services/: __init__.py  auth_service.py  comment_service.py  stats_service.py  tag_service.py  ticket_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_comments.py  test_meta.py  test_tickets.py  test_users.py
